# learn-c

./: CMakeLists.txt
source/: Error.c  File.c  Guess.c  Hello.c  Memory.c  OddOrEven.c  Pointer.c  String.c  Struct.c  Sum.c  Variable.c  dataType.c  main.c
