cmake_minimum_required(VERSION 3.15)
project(learn_c C)

set(CMAKE_C_STANDARD 11)

add_executable(Hello source/Hello.c source/Variable.c)
add_executable(DataType source/DataType.c)
add_executable(OddOrEven source/OddOrEven.c)
add_executable(Pointer source/Pointer.c)
add_executable(String source/String.c)
add_executable(Struct source/Struct.c)
add_executable(Error source/Error.c)
add_executable(Sum source/Sum.c)
add_executable(Memory source/Memory.c)
add_executable(Guess source/Guess.c)